@@ -68,7 +68,7 @@ For example, the following sum and integral with limits:</p>
 directives:</p>
 <p>The Schrödinger equation</p>
 <div class="formula" id="eq-schrodinger">
-<i>i</i><i>ℏ</i><span class="fraction"><span class="ignored">(</span><span class="numerator">∂</span><span class="ignored">)/(</span><span class="denominator">∂<i>t</i></span><span class="ignored">)</span></span>Ψ = <i>Ĥ</i>Ψ, 
+<i>i</i><i>ħ</i><span class="fraction"><span class="ignored">(</span><span class="numerator">∂</span><span class="ignored">)/(</span><span class="denominator">∂<i>t</i></span><span class="ignored">)</span></span>Ψ = <i>Ĥ</i>Ψ, 
 </div>
 <p>with the <em>wave function</em> <span class="formula">Ψ</span>, describes how the quantum state of a
 physical system changes in time.</p>
