@@ -187,9 +187,9 @@ directives:</p>
   <mi>i</mi>
   <mi>ℏ</mi>
   <mfrac>
-    <mo>∂</mo>
+    <mi>∂</mi>
     <mrow>
-      <mo>∂</mo>
+      <mi>∂</mi>
       <mi>t</mi>
     </mrow>
   </mfrac>
@@ -343,9 +343,9 @@ physical system changes in time.</p>
           <mo>∫</mo>
           <mrow>
             <mo>−</mo>
-            <mo>∞</mo>
+            <mi>∞</mi>
           </mrow>
-          <mo>∞</mo>
+          <mi>∞</mi>
         </msubsup>
         <mi>s</mi>
         <mo stretchy="false">(</mo>
@@ -370,9 +370,9 @@ physical system changes in time.</p>
           <mo>∫</mo>
           <mrow>
             <mo>−</mo>
-            <mo>∞</mo>
+            <mi>∞</mi>
           </mrow>
-          <mo>∞</mo>
+          <mi>∞</mi>
         </msubsup>
         <mi>s</mi>
         <mo stretchy="false">(</mo>
